--- a/Docker/app/Dockerfile
+++ b/Docker/app/Dockerfile
@@ -13,6 +13,15 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install -j$(nproc) zip \
     && docker-php-ext-install -j$(nproc) pdo pdo_mysql
 
+# Install dockerize. It is used to ensure that the database service is accepting
+# connections before trying to access it from the main application.
+ENV DOCKERIZE_VERSION v0.6.1
+RUN curl -L \
+    --output dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && \
+    tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && \
+    rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 ARG USER_UID=1000
 RUN adduser -uid ${USER_UID} --gecos coop --quiet --disabled-password coop
 
