🐳(dev) use DEV_MODE_ENABLED environment variable
DEV_MODE_ENABLED environement variable will allow us to use the
app_dev.php controller without modifying it or white listing ips.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     build: ./Docker/app/
     volumes:
       - "${ELEFAN_APP:-../gestion-compte}:/app"
+    environment:
+      - DEV_MODE_ENABLED=1
 
   nginx:
     image: nginx:1.15-alpine
