--- a/symfony/parameters.yml
+++ b/symfony/parameters.yml
@@ -8,8 +8,8 @@ parameters:
     super_admin.username: admin
     super_admin.initial_password: password
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_port: 25
+    mailer_host: smtp
+    mailer_port: 1025
     mailer_user: null
     mailer_password: null
     mailer_encryption: null
