use dockerize image in docker-compose instead of building it in main docker image

--- a/Docker/app/Dockerfile
+++ b/Docker/app/Dockerfile
@@ -1,26 +1,20 @@
 FROM php:7.2-fpm
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
         libpng-dev \
         git \
         zip \
+        wget \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && docker-php-ext-install -j$(nproc) zip \
     && docker-php-ext-install -j$(nproc) pdo pdo_mysql
 
-# Install dockerize. It is used to ensure that the database service is accepting
-# connections before trying to access it from the main application.
-ENV DOCKERIZE_VERSION v0.6.1
-RUN curl -L \
-    --output dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-    https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && \
-    tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && \
-    rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+RUN wget https://getcomposer.org/download/1.10.19/composer.phar && \
+    chmod +x composer.phar && \
+    mv composer.phar /usr/local/bin/composer
 
 ARG USER_UID=1000
 RUN adduser -uid ${USER_UID} --gecos coop --quiet --disabled-password coop
